--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kubinex-helper",
   "version": "1.0.4",
-  "description": "A single source of truth of helper contracts used by Poolz.",
+  "description": "A single source of truth of helper contracts used by kubinex.",
   "main": "truffle-config.js",
   "homepage": "https://github.com/kubinex0/Kubinex-Helper",
   "repository": {
